Fix overflow on modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6413,8 +6413,8 @@ ul.actions.special {
 }
 
 .policy-filling-background {
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - (100vh - 100%));
+  width: calc(100vw - (100vw - 100%));
   position: absolute;
   top: 0;
   left: 0;
